--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,11 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
     <string name="error_loading_posts">Error while loading posts</string>
-    <string name="newsfeed_story_subtitle">By %1$s – %2$s ago</string>
+    <string name="newsfeed_story_subtitle">By %1$s – %2$s</string>
     <string name="newsfeed_video_subtitle">%d views</string>
     <string name="by_x">By %s</string>
     <string name="x_ago">%s ago</string>
+    <string name="back_to_news_feed">back to news feed</string>
+    <string name="fragment_video_player">VideoPlayerFragment</string>
 
 </resources>
